# fbx.rs

./: .gitignore  Cargo.toml  README.md
fbx/: Cargo.toml
fbx/src/: binary.rs  error.rs  format.rs  lib.rs
fbx/src/binary/: reader.rs  writer.rs
fbx/src/format/: ascii.rs  base.rs  binary.rs
fbx_debugger/: Cargo.toml
fbx_debugger/src/: main.rs
fbx_reader/: Cargo.toml
fbx_reader/src/: lib.rs
