[package]
authors = ["Natsune Mochizuki <me@natsuneko.cat>"]
description = "read/write FBX in Rust"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "fbx"
repository = "https://github.com/mika-f/fbx"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
