[package]
authors = ["Natsune Mochizuki <me@natsuneko.cat>"]
description = "read FBX from command line"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "fbx_reader"
repository = "https://github.com/mika-f/fbx"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fbx = {path = "../fbx"}
